--- a/test/Feature_Verbose_Output.cls
+++ b/test/Feature_Verbose_Output.cls
@@ -2,13 +2,11 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "TFeatureTemplate"
+Attribute VB_Name = "Feature_Verbose_Output"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
-Attribute VB_Exposed = False
-'this is a template for new example driven tests
-
+Attribute VB_Exposed = True
 Option Explicit
 
 'separate tags by comma, e.g.: "wip,debug,production"
@@ -16,8 +14,8 @@ Const cTags = ""
 
 Public Property Get description() As String
 
-    description = "Add a description" & vbLf & _
-                    vbTab & "to explain your features purpose."
+    description = "Senfgurke will execute example steps" & vbLf & _
+                    vbTab & "and show the result on the console."
 End Property
 
 Public Sub test_examples()
@@ -26,8 +24,14 @@ Public Sub test_examples()
     Dim example As Variant
 
     Set examples = New Collection
-    example = Array("Rule: specify a rule to classify the following examples")
+    example = Array("Rule: Before executing example steps the feature description will be printed on console")
     examples.Add example
+    example = Array("Rule: Steps not starting with Given, When, Then or And will produces a Gherkin syntax error")
+    examples.Add example
+    example = Array("Rule: Every step will be preceded with it's result in capital letters")
+    examples.Add example
+    
+    
     example = Array("Example: add a headline to identify this example", _
                         "Given a precondition", _
                         "And another precondition", _
@@ -43,9 +47,8 @@ End Sub
 Public Function run_step(pcolStepProps As Collection) As Variant
     
     On Error GoTo error_handler
+    Select Case pcolStepProps.Item("step_type") & pcolStepProps.Item("line_body")
     
-    Select Case pcolStepProps.Item(TExampleRunner.ATTR_STEP_HEAD) & " " & pcolStepProps.Item(TExampleRunner.ATTR_STEP_BODY)
-        
         Case "Given a precondition"
            
         Case "Given another precondition"
