--- a/test/Support_Execute_Steps.cls
+++ b/test/Support_Execute_Steps.cls
@@ -37,8 +37,14 @@ Public Function run_step(pcolStepProps As Collection) As Variant
         
         Case "Given a step with an empty implementation"
         
+        Case "Given a step with a valid expectation"
+            TSpec.expect(1).to_be 1
+        
+        Case "Given a step with an invalid expectation"
+            TSpec.expect(1).to_be 2
+        
         Case Else
-            Err.raise ERR_ID_STEP_IS_MISSING
+            Err.Raise ERR_ID_STEP_IS_MISSING
     End Select
     run_step = Array("OK")
     Exit Function
@@ -55,16 +61,16 @@ Public Sub after()
 
 End Sub
 
-Public Property Get Tags() As Variant
-    Tags = cTags
+Public Property Get tags() As Variant
+    tags = cTags
 End Property
 
 Private Sub pending(pending_msg)
     TFeature.pending pending_msg
 End Sub
 
-Private Property Get Log() As Logger
-    Set Log = TFeature.Log
+Private Property Get log() As Logger
+    Set log = TFeature.log
 End Property
 
 
