--- a/test/Feature_Verbose_Output.cls
+++ b/test/Feature_Verbose_Output.cls
@@ -10,12 +10,12 @@ Attribute VB_Exposed = True
 Option Explicit
 
 'separate tags by comma, e.g.: "wip,debug,production"
-Const cTags = ""
+Const cTags = "wip"
 
 Public Property Get description() As String
 
-    description = "Senfgurke will execute example steps" & vbLf _
-                    & "and show the result on the console."
+    description = "The verbose formatter will show the test results" & vbLf _
+                    & "in a detailed format."
 End Property
 
 Public Sub test_examples()
@@ -26,19 +26,17 @@ Public Sub test_examples()
     Set examples = New Collection
     example = Array("Rule: Before executing example steps the feature description will be printed on console")
     examples.Add example
-    example = Array("Rule: Steps not starting with Given, When, Then or And will produces a Gherkin syntax error")
+    example = Array("Rule: A step will be preceded with it's result in capital letters")
     examples.Add example
-    example = Array("Rule: Every step will be preceded with it's result in capital letters")
+    example = Array("Rule: Rules and example titles will add an empty line before them")
     examples.Add example
-    
-    
-    example = Array("Example: add a headline to identify this example", _
-                        "Given a precondition", _
-                        "And another precondition", _
-                        "When any action happens", _
-                        "Then some result is expected")
+    example = Array("Rule: Failed steps will show the error message after the step")
     examples.Add example
-    
+    example = Array("Rule: Pending steps will show a pending message after the step")
+    examples.Add example
+    example = Array("Rule: Missing steps will show a code snippet after the step")
+    examples.Add example
+
     For Each example In examples
         TExampleRunner.run_example example, Me
     Next
@@ -47,7 +45,7 @@ End Sub
 Public Function run_step(pcolStepProps As Collection) As Variant
     
     On Error GoTo error_handler
-    Select Case pcolStepProps.Item("step_type") & pcolStepProps.Item("line_body")
+    Select Case pcolStepProps.Item(TExampleRunner.ATTR_STEP_HEAD) & " " & pcolStepProps.Item(TExampleRunner.ATTR_STEP_BODY)
     
         Case "Given a precondition"
            
@@ -67,11 +65,11 @@ error_handler:
     run_step = TFeature.fail_step(Err.Number, Err.description)
 End Function
 
-Public Sub before()
+Public Sub before_example()
     
 End Sub
 
-Public Sub after()
+Public Sub after_example()
 
 End Sub
 
