--- a/test/Feature_Execute_Examples.cls
+++ b/test/Feature_Execute_Examples.cls
@@ -10,7 +10,7 @@ Attribute VB_Exposed = False
 Option Explicit
 
 'separate tags by comma, e.g.: "wip,debug,production"
-Const cTags = "wip"
+Const cTags = ""
 
 Dim m_example As Variant
 Dim m_step_attributes As Collection
