--- a/source/TReport_Formatter_Verbose.cls
+++ b/source/TReport_Formatter_Verbose.cls
@@ -11,42 +11,43 @@ Option Explicit
 
 Public Sub process_msg(msg_package As Collection)
 
+    Dim message As String
+
+    message = prepare_msg(msg_package)
+    Debug.Print message
+End Sub
+
+Public Function prepare_msg(msg_package As Collection) As String
+    
+    Dim formatted_msg As String
+    
     Select Case msg_package(TReport.MSG_TYPE)
         Case TReport.TYPE_FEATURE_NAME
-            print_feature_name msg_package(TReport.MSG_CONTENT)
+            formatted_msg = format_feature_name(msg_package(TReport.MSG_CONTENT))
         Case TReport.TYPE_DESC
-            print_description msg_package(TReport.MSG_CONTENT)
+            formatted_msg = format_feature_description(msg_package(TReport.MSG_CONTENT))
         Case TReport.TYPE_RULE
-            print_rule msg_package(TReport.MSG_CONTENT)
+            formatted_msg = format_rule(msg_package(TReport.MSG_CONTENT))
         Case TReport.TYPE_EXAMPLE_TITLE
-            print_example_title msg_package(TReport.MSG_CONTENT)
+            formatted_msg = format_example_title(msg_package(TReport.MSG_CONTENT))
         Case TReport.TYPE_STEP
-            print_step msg_package(TReport.MSG_CONTENT), msg_package(TReport.MSG_STATUS), msg_package(TReport.MSG_ERR)
+            formatted_msg = format_step(msg_package(TReport.MSG_CONTENT), msg_package(TReport.MSG_STATUS), msg_package(TReport.MSG_ERR))
+        Case Else
+            formatted_msg = vbNullString
     End Select
-End Sub
+    prepare_msg = formatted_msg
+End Function
 
-Public Sub print_example_title(example_title As String)
-    Debug.Print format_example_title(example_title)
-End Sub
+Public Function format_step(step As String, status As String, err_msg As String) As String
+    
+    Dim formatted_msg As String
 
-Public Sub print_feature_name(feature_name As String)
-    Debug.Print format_feature_name(feature_name)
-End Sub
-
-Public Sub print_description(Description As String)
-    Debug.Print format_description(Description)
-End Sub
-
-Public Sub print_rule(rule As String)
-    Debug.Print format_rule(rule)
-End Sub
-
-Public Sub print_step(step As String, status As String, err_msg As String)
-    Debug.Print vbTab & status, step
+    formatted_msg = vbTab & status & Space$(12) & step
     If err_msg <> vbNullString Then
-        Debug.Print "", err_msg
+        formatted_msg = formatted_msg & vbLf & Space$(12) & err_msg
     End If
-End Sub
+    format_step = formatted_msg
+End Function
 
 Public Function format_example_title(example_title As String) As String
     format_example_title = vbLf & vbTab & example_title
@@ -56,8 +57,8 @@ Public Function format_feature_name(feature_name As String) As String
     format_feature_name = vbLf & "Test case: " & feature_name
 End Function
 
-Public Function format_description(Description As String) As String
-    format_description = vbTab & Join(Split(Description, vbLf), vbLf + vbTab)
+Public Function format_feature_description(Description As String) As String
+    format_feature_description = vbTab & Join(Split(Description, vbLf), vbLf + vbTab)
 End Function
 
 Public Function format_rule(rule As String) As String
